[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/art/npcs.png" type="Texture" id=1]
[ext_resource path="res://npcs/base_npc.gd" type="Script" id=2]
[ext_resource path="res://npcs/arrow.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/art/spritesheet.png" type="Texture" id=4]
[ext_resource path="res://npcs/line_to_target.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/sfx/arrow_click_down.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sfx/npc_wait.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/sfx/npc_reached_point.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/sfx/npc_countup.wav" type="AudioStream" id=10]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform bool disable_shadows = false;

void fragment()
{
	vec4 c = texture( TEXTURE, UV );
	if( disable_shadows )
	{
		c.a = step( 0.6, c.a );
	}
	COLOR = c;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/disable_shadows = false

[sub_resource type="Animation" id=3]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("npcs:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 6, 7 ]
}

[sub_resource type="Animation" id=4]
length = 1.6
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("npcs:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0, 1, 0, 1, 2, 1 ]
}

[sub_resource type="Animation" id=5]
length = 0.42
loop = true
step = 0.07
tracks/0/type = "value"
tracks/0/path = NodePath("npcs:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.14, 0.21, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5, 4 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.14, 0.35 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "_run_dust"
}, {
"args": [  ],
"method": "_run_dust"
} ]
}

[sub_resource type="Animation" id=6]
resource_name = "ufo"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("npcs:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="Animation" id=7]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 0, 144, 16, 16 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
length = 5.0
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 0, 144, 16, 16 ), Rect2( 16, 144, 16, 16 ), Rect2( 32, 144, 16, 16 ), Rect2( 48, 144, 16, 16 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_on_click_timer_finished"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.05, 0.15, 2, 2.05, 2.15, 3, 3.05, 3.15, 4, 4.05, 4.15 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1.5, 1.5 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1.5, 1.5 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1.5, 1.5 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1.5, 1.5 ), Vector2( 1, 1 ) ]
}

[node name="base_npc" type="Node2D"]
z_index = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="arrows" type="Node2D" parent="."]
z_index = 120
__meta__ = {
"_edit_lock_": true
}

[node name="arrow_right" parent="arrows" instance=ExtResource( 3 )]
position = Vector2( 16, 0 )

[node name="arrow_down" parent="arrows" instance=ExtResource( 3 )]
position = Vector2( 0, 16 )
rotation = 1.57079
flip_v = true
direction = Vector2( 0, 1 )

[node name="arrow_left" parent="arrows" instance=ExtResource( 3 )]
position = Vector2( -16, 0 )
rotation = 3.14159
flip_v = true
direction = Vector2( -1, 0 )

[node name="arrow_up" parent="arrows" instance=ExtResource( 3 )]
position = Vector2( 0, -16 )
rotation = -1.5708
direction = Vector2( 0, -1 )

[node name="npcs" type="Sprite" parent="."]
material = SubResource( 2 )
texture = ExtResource( 1 )
offset = Vector2( 0, -5 )
hframes = 8
frame = 3

[node name="anim" type="AnimationPlayer" parent="."]
anims/dead = SubResource( 3 )
anims/idle = SubResource( 4 )
anims/run = SubResource( 5 )
anims/ufo = SubResource( 6 )

[node name="motion_tween" type="Tween" parent="."]

[node name="click_timer" type="Sprite" parent="."]
visible = false
position = Vector2( 13, -16 )
z_index = 120
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 0, 144, 16, 16 )
__meta__ = {
"_edit_lock_": true
}

[node name="click_timer_animation" type="AnimationPlayer" parent="click_timer"]
anims/default = SubResource( 7 )
anims/run = SubResource( 8 )

[node name="line_to_target" parent="." instance=ExtResource( 5 )]
visible = false
show_behind_parent = true

[node name="arrow_click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = 8.139
bus = "sfx"

[node name="npc_wait" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
bus = "sfx"

[node name="npc_reached_goal_begin" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
bus = "sfx"

[node name="npc_reached_goal" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
bus = "sfx"
[connection signal="tween_all_completed" from="motion_tween" to="." method="_on_motion_tween_tween_all_completed"]
